Fixes dashboard visible on other pages and adds initial up animation for tophud

--- a/src/containers/Layout/Layout.scss
+++ b/src/containers/Layout/Layout.scss
@@ -7,6 +7,12 @@
   background: url("../../assets/images/commonlayer_top.svg") no-repeat top
     center/auto;
 }
+.top-btn{
+  cursor: pointer;
+}
+.DispNone{
+  display: none;
+}
 .tophover {
   position: absolute;
   height: 85px;
@@ -17,6 +23,7 @@
     center/auto;
   transform: translateY(-80px);
   transition: transform 1.5s;
+  animation: initial-up 1.5s;
 }
 .navbarr{
   display: flex;
@@ -24,6 +31,7 @@
   align-items: center;
   flex-direction: column;
   justify-content: flex-end;
+  height:30vh;
 }
 .navhover {
   display: flex;
@@ -100,10 +108,10 @@
 
 @keyframes initial-up {
   0% {
-    transform: translateY(0%);
+    transform: translateY(0px);
   }
   100% {
-    transform: translateY(-9.5%);
+    transform: translateY(-85px);
   }
 }
 
